2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	Explictly add copyright statements to make licensecheck happy.
	Reported by Pedro Fragoso.

	* libepc/enums.c.in, libepc/enums.h.in, Makefile.am:
	Mark libepc/enums.[ch] and libepc/marshal.[ch] as generated.
	* tests/*: Explictly add LGPL header to test-cases.
	* examples/*: Put examples into public domain.

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac: Bump version number.

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.1 ===

	* NEWS: Updated for release 0.3.1

2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	Use proper gtk-doc syntax for linking to functions.

	* libepc/consumer.c, libepc/contents.c, libepc/dispatcher.c,
	libepc/protocol.c, libepc/publisher.c, libepc/service-info.c,
	libepc/service-monitor.c, libepc/service-type.c, libepc/shell.c,
	libepc/tls.c, libepc-ui/password-dialog.c,
	libepc-ui/progress-window.c: Use proper syntax.

2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	Document new functions and properties.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/dispatcher.c, libepc/publisher.c: Document "cookie"/
	"service-cookie" and "collision-handling" properties, and accessors.
	* libepc/service-monitor.c: epc_service_monitor_new_for_types_strv.

2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	Use shorter names for EpcCollisionHandling members.

	* libepc/dispatcher.h: Rename EPC_COLLISION_HANDLING_NONE,
	EPC_COLLISION_HANDLING_ALTERNATIVE_NAME and
	EPC_COLLISION_HANDLING_UNIQUE_SERVICE to EPC_COLLISIONS_IGNORE,
	EPC_COLLISIONS_CHANGE_NAME and EPC_COLLISIONS_UNIQUE_SERVICE.
	* tests/test-dispatcher-unique.c, tests/test-publisher-unique.c,
	tests/test-dispatcher-local-collision.c, libepc/dispatcher.c,
	libepc/publisher.c: Use short EpcCollisionHandling names.

2007-12-10  Mathias Hasselmann  <mathias@openismus.com>
